--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-    "name": "trospysmp",
-    "version": "1.0.0",
-    "description": "trospysmp",
-    "keywords": [],
-    "author": "oliminator",
-    "license": "ISC",
-    "dependencies": {
-        "@babel/core": "^7.14.8",
-        "@babel/preset-env": "^7.14.8",
-        "autoprefixer": "^10.2.6",
-        "browser-sync": "^2.27.4",
-        "cssnano": "^5.0.6",
-        "gulp": "^4.0.2",
-        "gulp-babel": "^8.0.0",
-        "gulp-postcss": "^9.0.0",
-        "gulp-sass": "^5.0.0",
-        "gulp-terser": "^2.0.1",
-        "postcss": "^8.3.5",
-        "sass": "^1.35.2"
+    "name": "ano",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
-    "browserslist": [
-        "last 1 version",
-        "IE 11",
-        "> 1%"
-    ]
+    "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^4.1.3",
+        "vite": "^3.0.0",
+        "vite-compression-plugin": "^0.0.4",
+        "vite-plugin-html": "^3.2.0"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.7",
+        "sass": "^1.53.0"
+    }
 }
