--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-    "name": "ano",
     "private": true,
-    "version": "0.0.0",
+    "name": "trospysmp-web",
+    "description": "Neoficialny web pre trospysmp",
+    "version": "3.0.0",
+    "homepage": "https://github.com/OLIMINATOR/TrorospySMP-Web",
+    "author": {
+        "name": "OLIMINATOR",
+        "url": "https://github.com/OLIMINATOR",
+        "email": "oliminator@proton.me"
+    },
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -11,7 +18,6 @@
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^4.1.3",
         "vite": "^3.0.0",
-        "vite-compression-plugin": "^0.0.4",
         "vite-plugin-html": "^3.2.0"
     },
     "dependencies": {
