--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "vite-plugin-html": "^3.2.0"
     },
     "dependencies": {
+        "animate.css": "^4.1.1",
         "autoprefixer": "^10.4.7",
+        "postcss": "^8.4.14",
         "sass": "^1.53.0"
     }
 }
